fix: update frontend for lunette

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="/favicon.jpg" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>A-SOUL 录音棚</title>
+    <title>Dionysus 录音棚</title>
     <meta name="description" content="A-SOUL歌曲全收集！">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
-    <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF">
+    <link rel="mask-icon" href="/favicon.jpg" color="#FFFFFF">
     <meta name="theme-color" content="#ffffff">
     <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
